html special character bug fix on mobile

--- a/src/components/votesBar/votesBar.scss
+++ b/src/components/votesBar/votesBar.scss
@@ -27,17 +27,28 @@
 
 .bar-markers {
   text-align: center;
-  margin: 0 auto -89px;
-  font-size: 36px;
-  color: #000;
-  font-family: sans-serif;
+  margin: 0 auto -73px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  z-index: 5;
   @media screen and (max-width: 450px) {
-    margin-bottom: -83px;
+    margin-bottom: -65px;
   }
 }
 
+.markers {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 10px 10px 0 10px;
+  border-color: #000000 transparent transparent transparent;
+}
+
 .marker-bottom {
-  padding-top: 10px;
+  margin-top: 35px;
+  transform: rotate(180deg);
 }
 
 .bar {
